<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Policies"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/PolicyDocumenttxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:text="@string/policydocument"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/click_download"
            android:textColor="@color/black"
            android:layout_marginBottom="50dp"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/Attandance_and_time_offtxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/attandance_and_time_off"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/HarassmentInfotxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/prevention_of_sexual_harassment"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/CompetitonInfotxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/competiton_and_benefits"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/PerfomanceInfotxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/performance_and_goals"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/ReimbersementInfotxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reimbursement"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/ITnAssetsInfotxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/it_and_assets_policy"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/HomeIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:isScrollContainer="false"
            android:background="@color/primaryApp"
            android:src="@drawable/ic_baseline_home_24"/>

        <ImageView
            android:id="@+id/ProfileIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_profile_24"/>

        <ImageView
            android:id="@+id/LeavesIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_leaves_24"/>

        <ImageView
            android:id="@+id/DepatrmentIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_department_24"/>
        <ImageView
            android:id="@+id/PoliciesIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_conversation_24"/>

        <ImageView
            android:id="@+id/LogoutIv6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_logout_24"/>

    </LinearLayout>


</RelativeLayout>