<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/image3">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/loginPass"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:textColor="@color/black"
            android:text="@string/login"
            />


        <Button
            android:id="@+id/registertextview"
            android:text="@string/dont_have_account_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>