<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaveStatus"
    android:background="@drawable/image3">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/LeaveTitle"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/leave_status2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Employeenamestxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/employee_names"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TotalLeaveHolidaytxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/total_leave_holiday"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/UsedLeaveHolidaytxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/used_leave_holiday"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Otherstxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/others"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/REducationlevaltxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/education_leval"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>


        <Button
            android:id="@+id/EmployeesSubmitview"
            android:text="@string/submit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:textColor="@color/black" />


    </LinearLayout>

</RelativeLayout>