<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Departments"
    android:background="@drawable/image3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/DepartmtenTitle"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/department_title"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ITview"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:text="@string/_1_it"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Finantialview"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:text="@string/_2_finance"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Marketingview"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:text="@string/_3_marketing"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/RnDview"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:text="@string/_4_r_amp_d"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AddEmployeesview"
                android:text="@string/add"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_button"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/removeEmployeesview"
                android:text="@string/remove"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_button"
                android:textColor="@color/black" />
        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/HomeIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:isScrollContainer="false"
            android:background="@color/primaryApp"
            android:src="@drawable/ic_baseline_home_24"/>

        <ImageView
            android:id="@+id/ProfileIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_profile_24"/>

        <ImageView
            android:id="@+id/LeavesIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_leaves_24"/>

        <ImageView
            android:id="@+id/DepatrmentIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_department_24"/>
        <ImageView
            android:id="@+id/PoliciesIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_conversation_24"/>

        <ImageView
            android:id="@+id/LogoutIv1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_logout_24"/>

    </LinearLayout>
</RelativeLayout>